// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonElements/Styled GreyButtonStyle snapshot by default 1`] = `
.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-size: 14px;
  border: none;
  border-radius: 30px;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 5px 15px;
  color: rgb(255,255,255);
  background-color: rgb(118,118,118);
}

.c0 svg {
  fill: rgb(255,255,255);
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 16px;
    padding: 10px 20px;
  }
}

<button
  className="c0"
/>
`;

exports[`ButtonElements/Styled IconInButtonStyle snapshot by default 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  margin-right: 5px;
}

<span
  className="c0"
/>
`;

exports[`ButtonElements/Styled RedButtonStyle snapshot by default 1`] = `
.c0 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-size: 14px;
  border: none;
  border-radius: 30px;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 5px 15px;
  color: rgb(255,255,255);
  background-color: rgb(232,24,68);
}

.c0 svg {
  fill: rgb(255,255,255);
}

@media (min-width:47.94rem) {
  .c0 {
    font-size: 16px;
    padding: 10px 20px;
  }
}

<button
  className="c0"
/>
`;
